ipad alignment fixed

--- a/Themes/Current/Styles/homepage.css
+++ b/Themes/Current/Styles/homepage.css
@@ -197,7 +197,14 @@ li a{
 	margin-top: 0;
 }
 
-
+/* Portrait */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+	._item a p { margin: 5px 0 5px 7px; font-size: 12px; }
+}
 @media only screen and (max-width : 1200px) {
 	.homepage-content .mdl-cell--4-col-desktop.mdl-cell--4-col-desktop {
 		width: calc(33.3333%);
@@ -248,7 +255,4 @@ li a{
 	.homepage-content .mdl-cell--6-col-phone.mdl-cell--6-col-phone {
 		width: calc(100%);
 	}
-}
-
-@media only screen and (max-width : 320px) {
 }
